<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:padding="5dp"
    tools:context=".CalculateActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:text="0"
                android:textSize="20sp"
                android:lines="3"
                android:gravity="right|bottom"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5"
                android:alignmentMode="alignMargins">
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_chu"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/chu"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_chen"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/chen"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_guiling"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/guiling"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/seven"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/eight"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/nine"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_jia"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/jia"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/four"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_five"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/five"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_six"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/nine"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_jian"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/jian"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/one"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/two"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/three"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <ImageButton
                    android:id="@+id/btn_sqr"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:src="@drawable/sqr"
                    android:scaleType="centerInside"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_fenshu"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/fenshu"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/zero"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_dian"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/dian"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
                <Button
                    android:id="@+id/btn_dengyu"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/dengyu"
                    style="@style/Widget.App.Button.Secondary"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_front_size"/>
            </GridLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>